src/test/deca/context/valid/created/print.deca
// Description :
//    une instruction
//
// Resultats :
//		Ok


{
float a;
println("hello");
println(3);
println(a);

print("hello");
print(3);
print(a);

printx("hello");
printx(3);
printx(a);

printlnx("hello");
printlnx(3);
printlnx(a);
}